@@ -89,8 +89,6 @@ ca_tmpl=Template for CA certificate path,3,Default (<tt>~/ssl.ca</tt>)
 combined_tmpl=Template for combined certificate path,3,Default (<tt>~/ssl.combined</tt>)
 everything_tmpl=Template for key and certificates path,3,Default (<tt>~/ssl.everything</tt>)
 openssl_cnf=Location of OpenSSL configuration file,3,Work out automatically
-dovecot_ssl=Copy per-IP SSL certificates to Dovecot?,1,1-Yes,0-No
-postfix_ssl=Copy per-IP SSL certificates to Postfix?,1,1-Yes,0-No
 cert_type=Default SSL certificate hash,1,sha1-SHA1,sha2-SHA2
 can_letsencrypt=Who can request Let's Encrypt certificates?,1,0-All users,1-Resellers,2-Only master admin
 auto_letsencrypt=Request Let's Encrypt certificate at domain creation time?,1,1-Yes,0-No
